@@ -1,167 +1,0 @@
-                                Release Summary
-
-                        certified-asterisk-1.8.11-cert1
-
-                                Date: 2012-04-25
-
-                           <asteriskteam@digium.com>
-
-     ----------------------------------------------------------------------
-
-                               Table of Contents
-
-    1. Summary
-    2. Contributors
-    3. Other Changes
-    4. Diffstat
-
-     ----------------------------------------------------------------------
-
-                                    Summary
-
-                                 [Back to Top]
-
-   This release includes new features. For a list of new features that have
-   been included with this release, please see the CHANGES file inside the
-   source package. Since this is new major release, users are encouraged to
-   do extended testing before upgrading to this version in a production
-   environment.
-
-   The data in this summary reflects changes that have been made since the
-   previous release, certified-asterisk-1.8.11.0.
-
-     ----------------------------------------------------------------------
-
-                                  Contributors
-
-                                 [Back to Top]
-
-   This table lists the people who have submitted code, those that have
-   tested patches, as well as those that reported issues on the issue tracker
-   that were resolved in this release. For coders, the number is how many of
-   their patches (of any size) were committed into this release. For testers,
-   the number is the number of times their name was listed as assisting with
-   testing a patch. Finally, for reporters, the number is the number of
-   issues that they reported that were closed by commits that went into this
-   release.
-
-     Coders                   Testers                  Reporters              
-   1 qwell                  
-
-     ----------------------------------------------------------------------
-
-                      Commits Not Associated with an Issue
-
-                                 [Back to Top]
-
-   This is a list of all changes that went into this release that did not
-   directly close an issue from the issue tracker. The commits may have been
-   marked as being related to an issue. If that is the case, the issue
-   numbers are listed here, as well.
-
-   +------------------------------------------------------------------------+
-   | Revision | Author | Summary                               | Issues     |
-   |          |        |                                       | Referenced |
-   |----------+--------+---------------------------------------+------------|
-   | 363674   | qwell  | Asterisk 1.8-digiumphones branch has  |            |
-   |          |        | become Certified Asterisk 1.8.11.     |            |
-   +------------------------------------------------------------------------+
-
-     ----------------------------------------------------------------------
-
-                                Diffstat Results
-
-                                 [Back to Top]
-
-   This is a summary of the changes to the source code that went into this
-   release that was generated using the diffstat utility.
-
- apps/app_adsiprog.c              |    1
- apps/app_alarmreceiver.c         |    1
- apps/app_amd.c                   |    1
- apps/app_chanisavail.c           |    1
- apps/app_confbridge.c            |    1
- apps/app_dahdibarge.c            |    1
- apps/app_dahdiras.c              |    1
- apps/app_dictate.c               |    1
- apps/app_externalivr.c           |    1
- apps/app_festival.c              |    1
- apps/app_getcpeid.c              |    1
- apps/app_ices.c                  |    1
- apps/app_image.c                 |    1
- apps/app_jack.c                  |    1
- apps/app_milliwatt.c             |    2
- apps/app_minivm.c                |    1
- apps/app_mixmonitor.c            |   11
- apps/app_morsecode.c             |    1
- apps/app_mp3.c                   |    1
- apps/app_nbscat.c                |    1
- apps/app_osplookup.c             |    1
- apps/app_readfile.c              |    1
- apps/app_setcallerid.c           |    1
- apps/app_sms.c                   |    1
- apps/app_talkdetect.c            |    1
- apps/app_test.c                  |    1
- apps/app_url.c                   |    1
- apps/app_voicemail.c             |  331 ++++++---
- apps/app_voicemail.exports.in    |    2
- apps/app_waitforring.c           |    1
- apps/app_waitforsilence.c        |    1
- apps/app_zapateller.c            |    1
- cdr/cdr_csv.c                    |    1
- cdr/cdr_odbc.c                   |    1
- cdr/cdr_pgsql.c                  |    1
- cdr/cdr_radius.c                 |    1
- cdr/cdr_sqlite.c                 |    1
- cdr/cdr_sqlite3_custom.c         |    1
- cdr/cdr_tds.c                    |    1
- cel/cel_pgsql.c                  |    1
- cel/cel_radius.c                 |    1
- cel/cel_sqlite3_custom.c         |    1
- cel/cel_tds.c                    |    1
- channels/chan_alsa.c             |    1
- channels/chan_console.c          |    1
- channels/chan_gtalk.c            |    1
- channels/chan_h323.c             |    2
- channels/chan_jingle.c           |    1
- channels/chan_mgcp.c             |    1
- channels/chan_misdn.c            |    1
- channels/chan_nbs.c              |    1
- channels/chan_oss.c              |    1
- channels/chan_phone.c            |    1
- channels/chan_sip.c              |   76 +-
- channels/chan_skinny.c           |   13
- channels/chan_unistim.c          |    1
- formats/format_jpeg.c            |    1
- formats/format_vox.c             |    1
- funcs/func_frame_trace.c         |    1
- funcs/func_pitchshift.c          |    1
- funcs/func_presence_state.c      |  302 ++++++++
- include/asterisk/app_voicemail.h |   21
- include/asterisk/manager.h       |    2
- main/features.c                  |    5
- main/manager.c                   |   61 +
- main/message.c                   |   35
- main/utils.c                     |  128 +--
- pbx/pbx_ael.c                    |    1
- pbx/pbx_dundi.c                  |    1
- pbx/pbx_lua.c                    |    1
- pbx/pbx_realtime.c               |    1
- res/res_adsi.c                   |    1
- res/res_ael_share.c              |    1
- res/res_ais.c                    |    1
- res/res_config_ldap.c            |    1
- res/res_config_pgsql.c           |    1
- res/res_config_sqlite.c          |    1
- res/res_fax_spandsp.c            |    1
- res/res_jabber.c                 |    1
- res/res_phoneprov.c              |    1
- res/res_smdi.c                   |    1
- res/res_snmp.c                   |    1
- res/res_timing_kqueue.c          |    1
- res/res_timing_pthread.c         |    1
- tests/test_config.c              |  238 +++++-
- tests/test_voicemail_api.c       | 1415 +++++++++++++++++++++++++++++++++++++++
- 86 files changed, 2518 insertions(+), 196 deletions(-)
-
-     ----------------------------------------------------------------------
