@@ -1,3 +1,11 @@
+2012-05-29  Asterisk Development Team <asteriskteam@digium.com>
+
+	* Certified Asterisk 1.8.11-cert2 Released.
+
+	* AST-2012-007
+
+	* AST-2012-008
+
 2012-04-25  Asterisk Development Team <asteriskteam@digium.com>
 
 	* Certified Asterisk 1.8.11-cert1 Released.
